@@ -4,6 +4,7 @@ Build-Depends: @BUILDDEPS@ debhelper (>= 9),
  dpkg-dev (>= 1.13.19),
  dh-systemd (>= 1.5) | debhelper (>= 13.3.0),
  autotools-dev,
+ freetds-dev,
  libcurl4-openssl-dev | libcurl4-gnutls-dev,
  libcap-dev,
  libgdbm-dev,
@@ -169,6 +170,13 @@ Depends: freeradius (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}, $
 Description: Redis module for FreeRADIUS server
  This module is required to enable the FreeRADIUS server to access
  Redis databases.
+
+Package: freeradius-freetds
+Architecture: any
+Depends: freeradius (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}, ${dist:Depends}
+Description: FreeTDS support for FreeRADIUS
+ This module is required to enable the FreeRADIUS server to access
+ Microsoft SQL Server/Sybase databases.
 
 Package: freeradius-memcached
 Architecture: any
