@@ -1,0 +1,1 @@
+usr/lib/freeradius/rlm_sql_freetds*.so
