@@ -1,0 +1,3 @@
+# There's plenty in the description of this package to identify
+# what it does.
+freeradius-freetds: extended-description-is-probably-too-short
