@@ -1,0 +1,22 @@
+#! /bin/sh
+
+set -e
+
+case "$1" in
+  configure)
+        if [ -x "`which invoke-rc.d 2>/dev/null`" ]; then
+          invoke-rc.d freeradius force-reload || true
+        else
+          /etc/init.d/freeradius force-reload
+        fi
+        ;;
+  abort-upgrade)
+        ;;
+  abort-remove)
+        ;;
+  abort-deconfigure)
+        ;;
+esac
+
+#DEBHELPER#
+
