@@ -15,6 +15,7 @@ FreeRADIUS 3.0.26 Thu 07 Oct 2021 12:00:00 EDT urgency=low
 	  mods-available/google_ldap, and mods-available/cache_auth.
 	* Add Dockerfiles for Rocky8.
 	* Add raduat script to the freeradius-utils package.
+	* Add Debian freeradius-freetds package.
 
 	Bug fixes
 	* Ensure PBKDF2 always uses at least one iteration
